==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/nuvoton/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#include "hal_ll_mstpcr.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num)      (_module_num - 1)
#define CLK_APBCLK0_EADCCKEN_OFFSET             (28)
#define CLK_CLKDIV0_EADCDIV_OFFSET              (16)
#define CLK_CLKDIV0_EADCDIV_MASK                ( 0xFFUL << CLK_CLKDIV0_EADCDIV_OFFSET )
#define SYS_IPRST1_EADCRST_OFFSET               (28)
#define ADC_DAT_RESULT_MASK                     0xFFFFUL
#define ADC_DAT_8BIT_RESULT_MASK                0x00FFUL
#define ADC_DAT_10BIT_RESULT_MASK               0x03FFUL
#define ADC_CTL_ADCEN_OFFSET                    (0)
#define ADC_CTL_ADCRST_OFFSET                   (1)
#define ADC_CTL_ADCIEN_OFFSET                   (2)
#define ADC_CTL_RESSEL_OFFSET                   (6)
#define ADC_CTL_DIFFEN_OFFSET                   (8)
#define ADC_SCTL_CHSEL_OFFSET                   (0)
#define ADC_SCTL_TRGSEL_OFFSET                  (16)

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin,
                                        hal_ll_adc_voltage_reference_t vref_input,
                                        hal_ll_adc_resolution_t resolution,
                                        hal_ll_adc_handle_register_t *handle_map,
                                        uint8_t *hal_module_id ) {
    uint16_t pin_check_result;
    hal_ll_adc_pin_id index = { HAL_LL_PIN_NC };

    if (( pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    }

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_ADC_12BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input ) {
        case HAL_LL_ADC_VREF_EXTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[ pin_check_result ].pin != pin ) {
        hal_ll_adc_map_pin( pin_check_result, &index );
        handle_map[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_adc_handle =
            ( handle_t* )&hal_ll_adc_hw_specifics_map[ pin_check_result ].base;
    handle_map[ pin_check_result ].hal_ll_adc_handle =
            ( handle_t* )&hal_ll_module_state[ pin_check_result ].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution( handle_t *handle, hal_ll_adc_resolution_t resolution ) {
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );

    if( NULL == low_level_handle->hal_ll_adc_handle ) {
        return HAL_LL_MODULE_ERROR;
    }

    low_level_handle->init_ll_state = false;

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_ADC_12BIT_RES;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );
    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf ) {
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base;

    if( NULL == low_level_handle->hal_ll_adc_handle ) {
        return HAL_LL_MODULE_ERROR;
    }
    
    uint8_t sample_mod = hal_ll_adc_hw_specifics_map_local->channel;

    set_reg_bit( &( base->ctl ), ADC_CTL_ADCEN_OFFSET );
    Delay_500us();

    set_reg_bit( &( base->swtrg ), sample_mod );
    Delay_500us();

    while( !check_reg_bit( &( base->status2 ), ADC_STATUS2_ADIF0_OFFSET ) );

    *readDatabuf = read_reg_bits( &( base->dat[sample_mod] ), ADC_DAT_RESULT_MASK );
    set_reg_bit( &( base->status2 ), ADC_STATUS2_ADIF0_OFFSET );

    clear_reg_bit( &( base->ctl ), ADC_CTL_ADCEN_OFFSET );

    return HAL_LL_ADC_SUCCESS;
}

static void hal_ll_adc_hw_init( hal_ll_adc_base_handle_t *base, uint32_t resolution, uint8_t channel ) {
    uint8_t sample_mod = channel;

    set_reg_bits( &( base->ctl ), resolution << ADC_CTL_RESSEL_OFFSET );           //resolution can't be set to 6, 8, or 10 bit

    set_reg_bits( &( base->ctl ), 0xFUL << ADC_CTL_ADCIEN_OFFSET );

    clear_reg_bit( &( base->ctl ), ADC_CTL_DIFFEN_OFFSET );


    set_reg_bits( &( base->sctl[sample_mod] ), sample_mod << ADC_SCTL_CHSEL_OFFSET );
    clear_reg_bits( &( base->sctl[sample_mod] ), ADC_SCTL_TRGSEL_MASK );

    set_reg_bit( &( base->intsrc[0] ), sample_mod );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_adc_clock_enable();

    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t* )hal_ll_adc_get_base_struct( map->base );

    set_reg_bit( &( base->ctl ), ADC_CTL_ADCRST_OFFSET );

    set_reg_bit( SYS_IPRST1, SYS_IPRST1_EADCRST_OFFSET );
    clear_reg_bit( SYS_IPRST1, SYS_IPRST1_EADCRST_OFFSET );

    hal_ll_gpio_analog_input( map->pin );
    hal_ll_adc_hw_init( base, map->resolution, map->channel );
}
